# stellarion

./: Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/workflows/: deploy.yml
src/: main.rs  utils.rs
src/core/: assets.rs  audio.rs  camera.rs  combat.rs  constants.rs  game_settings.rs  messages.rs  missions.rs  mod.rs  network.rs  persistence.rs  player.rs  resources.rs  settings.rs  states.rs  systems.rs  turns.rs  utils.rs
src/core/combat/: combat.rs  mod.rs  report.rs  stats.rs  systems.rs
src/core/map/: icon.rs  map.rs  mod.rs  planet.rs  systems.rs  utils.rs
src/core/menu/: buttons.rs  mod.rs  settings.rs  systems.rs  utils.rs
src/core/ui/: aesthetics.rs  dark.rs  mod.rs  systems.rs  utils.rs
src/core/units/: buildings.rs  defense.rs  missions.rs  mod.rs  ships.rs
