[package]
name = "stellarion"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "serialize",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
]}
bevy_kira_audio = "0.23.0"
bevy_renet = "2.0.0"
bimap = "0.6.3"
bincode = { version = "2.0.1", features = ["serde"] }
# Used by `rand` and requires feture flag for `wasm` target
getrandom = { version = "0.3.3", features = ["wasm_js"] }
image = "0.25.6"
rand = "0.9.2"
regex = "1.11.3"
rfd = "0.15.4"
serde = "1.0.228"
strum = "0.27.2"
strum_macros = "0.27.2"
winit = "0.30.12"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
